so you think you can tell

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "ant-design-vue": "4.x",
     "axios": "^1.6.7",
     "less": "^4.2.0",
-    "lodash.clonedeep": "^4.5.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "remeda": "^1.47.1",
     "vue": "^3.4.15",
     "vue-json-pretty": "^2.3.0",
     "vue-router": "^4.2.5",
