--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue": "^3.4.27",
     "vue-json-pretty": "^2.4.0",
     "vue-router": "^4.3.2",
+    "vue-select": "^4.0.0-beta.6",
     "vuedraggable": "4.1.0"
   },
   "devDependencies": {
